welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:13: error: type mismatch;
 found   : Unit
 required: Boolean
      if (estFaceMur()) {
      ^SnakeBuggle:19: error: type mismatch;
 found   : Unit
 required: Boolean
      if (estFaceMur()) {
      ^SnakeBuggle:17: error: type mismatch;
 found   : Unit
 required: Boolean
    else if (getDirection == Direction.OUEST) {
         ^